Closed Bug 1056371 Opened 10 years ago Closed 10 years ago

Fix AppleATDecoder dtor counting

Categories

(Core :: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: rillian, Assigned: rillian)

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → giles
Attachment #8476309 - Flags: review?(cpearce)
Attachment #8476309 - Flags: review?(cpearce) → review+
https://hg.mozilla.org/mozilla-central/rev/27cbfef31278
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: