Bug 1056371 - Fix AppleATDecoder dtor counting. r=cpearce

Typo affecting leak detection.